# grpc_client

./: .gitignore  CMakeLists.txt  README.md  build.sh  client.cpp  grpcdata.proto
